--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = subm
 	url = git@github.com:yanpei526/subm.git
 	branch = dev
+[submodule "prjc"]
+	path = prjc
+	url = git@github.com:yanpei526/prjc.git
